# jon.recoil.org-src

./: .gitmodules  CLAUDE.md  Dockerfile  README.md  atom.xml  build.sh  check.sh  deploy.sh  index.mld  index.odoc-index  summarise.py
.devcontainer/: devcontainer.json  setup-project.sh
blog/: index.mld
blog/2025/: index.mld
blog/2025/03/: code-block-metadata.mld  dune  index.mld  module-type-of.mld
blog/2025/04/: dune  index.mld  meeting-the-team.mld  ocaml-docs-ci-and-odoc-3.mld  odoc-3.mld  semantic-versioning-is-hard.mld  this-site.mld
blog/2025/05/: ai-for-climate-and-nature-day.mld  docs-progress.mld  files  files2  index.mld  lots-of-things.mld  oxcaml-gets-closer.mld  ticks-solved-by-ai.mld
blog/2025/06/: index.mld  week23.mld
blog/2025/07/: index.mld  odoc-3-live-on-ocaml-org.mld  retrospective.mld  week27.mld  week28.mld
blog/2025/08/: index.mld  ocaml-lsp-mcp.mld  ocaml-mcp-server.mld  week33.mld
blog/2025/09/: build-ids-for-day10.mld  caching-opam-solutions.mld  caching-opam-solutions2.mld  giving-hub-cl-an-upgrade.mld  index.mld  odoc-bugs.mld
blog/2025/11/: foundations-of-computer-science.mld  index.mld
blog/2025/12/: an-svg-is-all-you-need.mld  claude-and-dune.mld  graph.js  index.mld  svgscript.js
blog/2026/: index.mld
blog/2026/01/: index.mld  weeknotes-2026-03.mld  weeknotes-2026-04-05.mld
blog/2026/02/: index.mld  odoc-js-notebooks-fun.mld  weeknotes-2026-06.mld  weeknotes-2026-08.mld
blog/2026/03/: index.mld  weeknotes-2026-09.mld
drafts/: index.mld  ocaml-docs-ci-and-odoc-3.mld
notebooks/: index.mld
notebooks/foundations/: dune  foundations1.mld  foundations10.mld  foundations11.mld  foundations2.mld  foundations3.mld  foundations4.mld  foundations5.mld  foundations6.mld  foundations7.mld  foundations8.mld  foundations9.mld  index.mld
notebooks/oxcaml/: comprehensions-intro.md  local.mld  parallelism.md
notebooks/rwo/: guided-tour.md
reference/: index.mld
scripts/: atom.xml  dune  feed  gen_atom.ml  gen_blog_index.ml  migrate_images.sh
